--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
     show-sql: true
     properties.hibernate.format_sql: true
     database-platform: org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto: create-drop
+    hibernate.ddl-auto: create-drop
