--- a/deployment.yml
+++ b/deployment.yml
@@ -20,3 +20,15 @@ spec:
           env:
           - name: SPRING_RABBITMQ_HOST
             value: rabbitmq-cluster-ip-service
+---
+apiVersion: v1
+kind: Service
+metadata:
+ name: football-cluster-ip-service
+spec:
+ type: ClusterIP
+ ports:
+   - port: 8080
+     targetPort: 8080
+ selector:
+   component: football
