Added create game feature
* Can create a game and select the team to play with
* Change lineup feature
* Substitution feature

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     path: /h2-console
   jpa:
     show-sql: true
-    properties.hibernate.format_sql: true
+    properties:
+      hibernate.format_sql: true
+      javax.persistence.schema-generation:
+        drop-source: script
+        drop-script-source: data-drop.sql
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: create-drop
