--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,13 @@
                     <compilerPlugins>
                         <plugin>spring</plugin>
                         <plugin>kotlinx-serialization</plugin>
+                        <plugin>all-open</plugin>
                     </compilerPlugins>
+                    <pluginOptions>
+                        <option>all-open:annotation=javax.persistence.Entity</option>
+                        <option>all-open:annotation=javax.persistence.Embeddable</option>
+                        <option>all-open:annotation=javax.persistence.MappedSuperclass</option>
+                    </pluginOptions>
                 </configuration>
                 <dependencies>
                     <dependency>
