--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
         drop-script-source: data-drop.sql
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: create-drop
+logging.level.org.hibernate:
+  SQL: DEBUG
+  type.descriptor.sql.BasicBinder: TRACE
