--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:~/tmp/testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
-  h2.console:
-    enabled: true
-    path: /h2-console
+    url: jdbc:postgresql://localhost:5432/gamedb
+    driverClassName: org.postgresql.Driver
+    username: gamedb
+    password: postgres
+    initialization-mode: always
   jpa:
-    show-sql: true
-    properties:
-      hibernate.format_sql: true
-      javax.persistence.schema-generation:
-        drop-source: script
-        drop-script-source: data-drop.sql
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate.ddl-auto: create-drop
-logging.level.org.hibernate:
-  SQL: DEBUG
-  type.descriptor.sql.BasicBinder: TRACE
+    hibernate.ddl-auto: validate
+
